external-crates/move/crates/move-package-alt/tests/snapshots/manifest_parsing_test__Move.toml.snap
---
source: crates/move-package-alt/tests/manifest_parsing_test.rs
expression: manifest
---
Manifest {
    package: PackageMetadata {
        name: "Test",
        edition: "2024.beta",
        metadata: (),
    },
    environments: {
        "mainnet": "125125sar",
    },
    dependencies: {},
    dep_overrides: {},
}
